# csv-to-trakt

./: .replit  access_token.pickle  import_to_trakt.py  pyproject.toml
data/: Bibliography - Movies.csv  Bibliography - TV Shows.csv
not_found/: episodes.csv  movies.csv
